# 9XAIPal

./: .gitignore  LICENSE  README.md  pyproject.toml
backend/: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.mineru  docker-compose.yml  pyproject.toml  requirements.txt  start-lan-server.sh
backend/app/: __init__.py  main.py
backend/app/api/: DESIGN.md  deps.py  errors.py
backend/app/chat/: README.md  __init__.py  citations.py  external_context.py  global_context.py  guardrail.py  local_context.py  orchestrator.py  overview_context.py  prompts.py  research_agent.py  router.py
backend/app/core/: DESIGN.md  celery_app.py  config.py  lifecycle.py  logging.py  paths.py  security.py
backend/app/database/: README.md  __init__.py  connection.py  migrations.py  pgvector.py  schema.sql  transactions.py
backend/app/embeddings/: README.md  __init__.py  model.py  service.py  service_sync.py
backend/app/extraction/: README.md  __init__.py  assets.py  chunker.py  jobs.py  mineru_client.py  normalizer.py  pipeline.py  pipeline_sync.py
backend/app/llm/: README.md  __init__.py  client.py  model_registry.py  multimodal.py  ollama_client.py  resolver.py  vlm_client.py
backend/app/schemas/: README.md  chat.py  chunks.py  common.py  documents.py  search.py
backend/app/search/: README.md  __init__.py  ranking.py  searxng_client.py
backend/app/services/: README.md  chunks.py  documents.py  image_service.py  ingestion.py  reading_order.py  retrieval.py
backend/app/storage/: README.md
backend/app/summarization/: __init__.py  figure_describer_sync.py  section_summarizer_sync.py
backend/docs/: ARCHITECTURE.md  MIGRATIONS.md  README.md
backend/tests/: README.md  conftest.py  test_chunk_sequence.py  test_context_router.py  test_ingestion_pipeline.py  test_provider_resolver.py  test_subthread_conversations.py  test_vector_retrieval.py
docs/: Architecture.html  (+10 more)
(+41 files in other folders)
